--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,6 +53,12 @@ body {
     margin-bottom: 5rem;
 }
 
+.small {
+    color: #000;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
+}
+
 #pitchButton,
 #sendButton {
     font-family: 'Montserrat', sans-serif;
